some tests and updates

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,11 @@
+body {
+    margin: 0;
+    padding: 0;
+}
 
-.test {
+.app {
   background: #000000;
   color: #ffffff;
+  padding: 10px;
+  text-align: center;
 }
